--- a/frontend/web/src/App.css
+++ b/frontend/web/src/App.css
@@ -1,4 +1,42 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*@theme {*/
+/*    --breakpoint-2xs: 10rem;*/
+/*    --breakpoint-xs : 20rem;*/
+/*}*/
+
+.index{
+    position: relative;
+    z-index: 1;
+    background: linear-gradient(to bottom right, transparent 20%, black );
+}
+.index::before{
+    content:'';
+    width:100%;
+    height:100%;
+    position:absolute;
+    /*background-image: url("https://www.fundacionaquae.org/wp-content/uploads/2016/05/amazonia-1-1024x576.jpg");*/
+    z-index: -1;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.3;
+}
+
+
+.custom-bg {
+    /*background:*/
+    /*        linear-gradient(to right, rgba(103, 232, 249, 0.7), rgba(251, 146, 60, 0.7)),*/
+    /*        url('https://www.fundacionaquae.org/wp-content/uploads/2016/05/amazonia-1-1024x576.jpg');*/
+
+    /*background-blend-mode: overlay; !* opcional para mezclar *!*/
+    /*background-size: cover;*/
+    /*background-position: center;*/
+    /*background-repeat: no-repeat;*/
+}
+
 
 
 /*utility-class*/
@@ -21,10 +59,21 @@
 
 /*body*/
 body{
-    scroll-behavior: smooth;
+    /*scroll-behavior: smooth;*/
+    /*position: relative;*/
 }
 
 /*end-body*/
+
+/*Header*/
+.gapIcons{
+    gap : clamp(5px, 2.5vw, 40px)
+}
+.clampHeader{
+ /*width : clamp(95%, 70vw, 80%)*/
+}
+/*end-Header 424 371 503.5*/
+
 
 .containerCheck{
     position: relative;
