--- a/frontend/web/src/App.css
+++ b/frontend/web/src/App.css
@@ -69,6 +69,38 @@ body{
 .gapIcons{
     gap : clamp(5px, 2.5vw, 40px)
 }
+
+
+.itemCount{
+    /*position: relative;*/
+    z-index: 999;
+    background: red;
+}
+.itemCount::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: gainsboro;
+    z-index: -999;
+
+    animation: pulse-count 3s ease-in-out infinite;
+}
+.animation-count{
+
+}
+
+@keyframes pulse-count {
+    0%{
+        transform: scale(.5);
+    }
+    100%{
+        transform: scale(1.5);
+    }
+}
+
+
 .clampHeader{
  /*width : clamp(95%, 70vw, 80%)*/
 }
@@ -119,7 +151,7 @@ body{
 }
 
 .showItem{
-    animation: show 0.5s linear forwards;
+    animation: show 0.5s linear;
 }
 
 
