--- a/frontend/web/src/App.css
+++ b/frontend/web/src/App.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/*html, body, #root {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*    height: auto;*/
+/*    min-height: 100%;*/
+/*    background: #111;*/
+/*    overflow-x: hidden;*/
+/*}*/
+
 /*@theme {*/
 /*    --breakpoint-2xs: 10rem;*/
 /*    --breakpoint-xs : 20rem;*/
@@ -14,6 +24,129 @@
 
 
 }
+body{
+    background: #1a1721;
+}
+#root{
+
+}
+
+
+.title {
+    position: fixed;
+    top: 50vh;
+    width: 100%;
+    text-align: center;
+    transform: translateY(-50%);
+    font-size: 8vw;
+    font-weight: 900;
+    font-family: sans-serif;
+    z-index: -30;
+}
+
+/*----slider----*/
+
+.circleSlide {
+    position: relative;
+    /*width: 150px;*/
+    z-index: 1;
+    transition: all .5s linear;
+    overflow: hidden; /* importante */
+
+    animation: widthElement .25s linear forwards;
+}
+
+@keyframes widthElement{
+    0%{
+        width: 15px;
+    }
+    100%{
+        width: 75px;
+    }
+}
+
+
+.circleSlide::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: grey;
+    z-index: -1;
+    border-radius: 16px;
+    transform-origin: left;
+    /*transform: scaleX(0);*/
+    animation: xSlide 5s ease-in; /* <-- AQUÍ */
+}
+
+@keyframes xSlide {
+    0% {
+        transform: scaleX(0.025);
+    }
+    100% {
+        transform: scaleX(1);
+    }
+}
+
+
+
+
+/*------sliderEnd------------*/
+.slideElement{
+    fill: transparent;
+    stroke: white;
+    stroke-width: 2px;
+}
+.aguajeSvg{
+    fill: transparent;
+    animation: drawFill 5s ease-out infinite;
+}
+.aguajeSvg > path{
+    stroke: white;
+    stroke-width: 2px;
+    stroke-dasharray: 200 50;
+    animation: drawSvg 5s ease-out infinite ;
+}
+
+
+
+@keyframes drawFill {
+    0%{
+    }
+    75%{
+        fill: transparent;
+    }
+    100%{
+        fill: white;
+    }
+}
+
+@keyframes drawSvg{
+    0%{
+        stroke-dashoffset: 200;
+        stroke-width: 2;
+    }
+    50%{
+
+    }
+    100%{
+        stroke-dashoffset: 0;
+        stroke-width: 0;
+    }
+}
+
+.title-outline {
+    color: transparent;
+    -webkit-text-stroke: 1.5px white;
+    z-index: 30;
+}
+
+.title-fusion {
+    color: #804691;
+    mix-blend-mode: screen;
+    z-index: 30;
+}
+
 
 
 .animate-heightDown{
@@ -47,6 +180,24 @@
     z-index: 1;
     background: linear-gradient(to bottom right, transparent 20%, black );
 }
+.title{
+    /*font-weight: bold;*/
+    /*background: linear-gradient(to right, rgba(0,0,0,1) 0%, rgba(0,0,0,.1) 100%);*/
+    /*!*background: blue;*!*/
+    /*-webkit-background-clip: text;*/
+    /*-webkit-text-fill-color: transparent;*/
+
+    /*background-size: 200% auto;*/
+    /*transition: background-position .3s;*/
+    /*background-position: left center;*/
+}
+
+.title-two{
+    background: linear-gradient(to right, rgba(255,192,203,.5), pink 20%);
+    /*backdrop-filter: blur(4px);*/
+}
+
+
 .index::before{
     content:'';
     width:100%;
@@ -61,81 +212,6 @@
 }
 
 
-.custom-bg {
-    /*background:*/
-    /*        linear-gradient(to right, rgba(103, 232, 249, 0.7), rgba(251, 146, 60, 0.7)),*/
-    /*        url('https://www.fundacionaquae.org/wp-content/uploads/2016/05/amazonia-1-1024x576.jpg');*/
-
-    /*background-blend-mode: overlay; !* opcional para mezclar *!*/
-    /*background-size: cover;*/
-    /*background-position: center;*/
-    /*background-repeat: no-repeat;*/
-}
-
-/*---containerProcess---*/
-/*.containerProcess{*/
-
-/*}*/
-/*.processOne::before{*/
-/*    content:'';*/
-/*    width: 25px;*/
-/*    height: 25px;*/
-/*    background: purple;*/
-/*    position: absolute;*/
-/*    left: 0;*/
-/*    top: 50%;*/
-/*    transform: translateY(-50%);*/
-/*    border-radius: 50%;*/
-/*    z-index: 2;*/
-/*}*/
-/*.processTwo::before{*/
-/*    content:'';*/
-/*    width: 25px;*/
-/*    height: 25px;*/
-/*    background: greenyellow;*/
-/*    position: absolute;*/
-/*    left: 0;*/
-/*    top: 50%;*/
-/*    transform: translateY(-50%);*/
-/*    border-radius: 50%;*/
-/*    z-index: 2;*/
-/*}*/
-/*.processThree::before{*/
-/*    content:'';*/
-/*    width: 25px;*/
-/*    height: 25px;*/
-/*    background: lightblue;*/
-/*    position: absolute;*/
-/*    left: 0;*/
-/*    top: 50%;*/
-/*    transform: translateY(-50%);*/
-/*    border-radius: 50%;*/
-/*    z-index: 2;*/
-/*}*/
-/*.processFour::before{*/
-/*    content:'';*/
-/*    width: 25px;*/
-/*    height: 25px;*/
-/*    background: orchid;*/
-/*    position: absolute;*/
-/*    left: 0;*/
-/*    top: 50%;*/
-/*    transform: translateY(-50%);*/
-/*    border-radius: 50%;*/
-/*    z-index: 2;*/
-/*}*/
-/*.processFour::after{*/
-/*    content:'';*/
-/*    width: 25px;*/
-/*    height: 25px;*/
-/*    background: orchid;*/
-/*    position: absolute;*/
-/*    right: 0;*/
-/*    top: 50%;*/
-/*    transform: translateY(-50%);*/
-/*    border-radius: 50%;*/
-/*    z-index: 2;*/
-/*}*/
 
 .animate-process{
     animation: process 1s ease-in-out forwards;
@@ -150,9 +226,6 @@
         transform: scaleX(1);
     }
 }
-
-
-
 
 
 
@@ -174,12 +247,16 @@
 
 /*end-utility-class*/
 
+/*body, html, #root {*/
+/*    position: static !important;*/
+/*    overflow: visible !important;*/
+/*    transform: none !important;*/
+/*}*/
+
+
 
 /*body*/
-body{
-    /*scroll-behavior: smooth;*/
-    /*position: relative;*/
-}
+
 
 /*end-body*/
 
@@ -189,10 +266,19 @@ body{
 }
 
 
+.parent {
+    perspective: 800px;
+}
+.child {
+    transform-style: preserve-3d;
+}
 
 
 .itemCount{
-
+    /*position: relative;*/
+    /*z-index: 999;*/
+    /*background: red;*/
+    /*background: white;*/
 }
 .itemCount::after{
     content: "";
@@ -214,7 +300,7 @@ body{
     border-radius: 50%;
     border: 1px solid blueviolet;
     /*background: transparent;*/
-    z-index: -1000;
+    z-index: -998;
 
     animation: pulse-count-two 1s linear infinite;
 
@@ -226,22 +312,20 @@ body{
 @keyframes pulse-count-two {
     0%{
         transform: scale(0.75);
-        opacity: .75;
     }
     100%{
         transform: scale(1.25);
-        opacity: .25;
     }
 }
 
 @keyframes pulse-count {
     0%{
         transform: scale(.75);
-        opacity: .5;
+        opacity: 1;
     }
     100%{
         transform: scale(2);
-        opacity: .25;
+        opacity: .5;
     }
 }
 
@@ -263,6 +347,8 @@ body{
     transition: opacity 0.5s ease-in-out;
 }
 
+.cuacksito{
+}
 /*navBar*/
 .clampNavBar{
     width : clamp(350px, 55vw ,65%)
